test(part1): adapt tests to the new loop/contract shape + fix NPEs
- agent/TurnRecord: the payload schema has OPTIONAL fields (a synthetic
  TOOL_RESPONSE observation carries no call_id). Map.copyOf/Map.of are
  null-hostile and threw NPE for those — make the canonical constructor and
  the toolResponse factory null-tolerant (LinkedHashMap-backed unmodifiable).
- agent/WorkflowRunner: the @Component declared a raw java.nio.file.Path +
  bare long constructor param with no @Value, so Spring could not wire it and
  the whole context failed to load (all @SpringBootTest tests red). Resolve
  workspaceRoot/maxCallsPerEpisode via @Value, matching AgentService.
- test SchemaNormalizerServiceTest: replace the retired
  buildOpenAIResponseSchema assertion with the new veto_pulse schema shape
  built by DefaultCapabilityTranslator (thought-ON/autonomous + guided
  variants), asserting calls/features/etc. and that the legacy single
  `call` field is gone.
- test AgentEndToEndTest: rewrite as a deterministic non-Spring unit test that
  drives the real AgentService→VetoAgent→AgentRunner loop with a scripted
  UniformLLMCaller (finish + tool-call-then-finish), asserting message
  streaming, history shape, and IDLE return. Replaces the dead
  Agent.builder()/withState()/turns() API test that needed a live API key.

Co-Authored-By: Claude <noreply@anthropic.com>